# wit_transcriber

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Preferences.py  README.md  application.py  config.example.json  constants.py  pyproject.toml  requirements.txt  settings.py  setup.py  wit_transcriber.py  wit_transcriber.spec  wit_transcriber_gui.spec
.github/workflows/: ci.yml  release.yml
assets/: chat-centered-text-duotone.icns
pyinstaller/: requirements.txt  wit_transcriber.spec
wit_transcriber/: __init__.py  __main__.py
wit_transcriber/api_client/: client.py
wit_transcriber/cli/: app.py
wit_transcriber/gui/: app.py  constants.py  main_window.py  preferences.py  settings.py  utils.py
