[tool.poetry]
name = "wit_transcriber"
version = "0.1.0"
description = "A mini command line tool to transcribe media files using wit.ai"
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
httpx = "^0.23.0"
pydub = "^0.25.1"
ratelimiter = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
pre-commit = "^2.19.0"
isort = "^5.10.1"
mypy = "^0.950"
flake8 = "^4.0.1"
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wit_transcriber = 'wit_transcriber:main'


[tool.black]
include = '(droos_bot\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
files = ["droos_bot"]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
#warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
#disallow_untyped_decorators = true
