[tool.poetry]
name = "wit_transcriber"
version = "0.2.1"
description = "A tool to transcribe media files using wit.ai"
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
httpx = "^0.25.1"
pydub = "^0.25.1"
ratelimiter = "^1.2.0"
AwesomeTkinter = {version = "^2021.11.8", extras = ["gui"]}
click = "^8.1.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^23.11"
pre-commit = "^3.3.3"
isort = "^5.12.0"
mypy = "^1.4"
flake8 = "^6.0.0"
cx-Freeze = "^6.15.2"
pyinstaller = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wit_transcriber = 'wit_transcriber.cli.app:transcribe'
wit_transcriber_gui = 'wit_transcriber.gui.app:gui'


[tool.black]
include = '(wit_transcriber\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
files = ["wit_transcriber"]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
#warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
#disallow_untyped_decorators = true
